Update background color in work.html
Changed background color from light blue to a darker shade.

--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <title>WEB PROGRAMMING HOMEWORK</title>
     <style>
         body {
-            background-color: lightblue;
+            background-color: rgb(21, 103, 130);
         }
     </style>
 </head>
